# serene

./: README.md  pyproject.toml
serene/data/: __init__.py  collator.py  dataset.py  sampler.py
serene/evaluation/torch/: __init__.py  functional.py  metric.py
serene/preprocessing/: encode.py  filter.py  split.py
serene/preprocessing/functional/: filter.py  split.py
serene/recommender/: __init__.py  lightning.py
serene/recommender/model/: __init__.py  attention.py  feed_forward_network.py  gpt4rec.py  llama4rec.py  model.py  sasrec.py
