[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "serene"
version = "0.0.42"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "polars",
    "torch>=2.6.0",
    "transformers",
]

[tool.setuptools.packages.find]
include = ["serene"]

[tool.ruff]
line-length = 120
